src/objects/ffps_brunt__CollectionLine__c.object
<CustomObject>
    <fields>
        <fullName>ffps_brunt__AmounttoPay__c</fullName>
        <label>Amount to Pay</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffps_brunt__CollectionSummary__c</fullName>
        <label>Collection Summary</label>
        <referenceTo>ffps_brunt__CollectionSummary__c</referenceTo>
        <relationshipLabel>Collection Lines</relationshipLabel>
        <relationshipName>CollectionLines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ffps_brunt__DocumentValue__c</fullName>
        <label>Document Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffps_brunt__Document_Number__c</fullName>
        <formula>ffps_brunt__TransactionLine__r.c2g__DocumentNumber__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Document Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffps_brunt__OutstandingBalance__c</fullName>
        <label>Outstanding Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffps_brunt__Selected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Selected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ffps_brunt__TransactionLine__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transaction Line</label>
        <referenceTo>c2g__codaTransactionLineItem__c</referenceTo>
        <relationshipLabel>Collection Lines</relationshipLabel>
        <relationshipName>CollectionLines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ffps_brunt__TransactionType__c</fullName>
        <label>Transaction Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Invoice</fullName>
                </value>
                <value>
                    <fullName>Credit Note</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Collection Line</label>
    <nameField>
        <displayFormat>CL{000000}</displayFormat>
        <label>Collection Line Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Collection Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>